--- a/src/WSP/PromoBundle/Resources/views/Default/simple.html.twig
+++ b/src/WSP/PromoBundle/Resources/views/Default/simple.html.twig
@@ -90,8 +90,8 @@ ga('send', 'pageview');
     </form> {{ 'contact.postaction'|trans({}, "WSPPromo")|raw }}
     <div class="clearfix">
         <ul class="social-icons" style="float: right; width: 70px;">
-            <li style="text-indent: 0px"><a target="_blank" href="https://www.facebook.com/wsprice.it?ref=hl"><img src="{{ asset('bundles/wspadmin/images/social/facebook.png') }}" alt="Facebook" /></a></li>
-            <li style="text-indent: 0px"><a target="_blank" href="http://www.youtube.com/watch?v=ZQ1ZaP9CTBg"><img src="{{ asset('bundles/wspadmin/images/social/youtube.png') }}" alt="Youtube" /></a></li>
+            <li style="text-indent: 0px; margin: 0 3px;"><a target="_blank" href="https://www.facebook.com/wsprice.it?ref=hl"><img src="{{ asset('bundles/wspadmin/images/social/facebook.png') }}" alt="Facebook" /></a></li>
+            <li style="text-indent: 0px; margin: 0 3px;"><a target="_blank" href="http://www.youtube.com/watch?v=ZQ1ZaP9CTBg"><img src="{{ asset('bundles/wspadmin/images/social/youtube.png') }}" alt="Youtube" /></a></li>
         </ul>
     </div>
     {#{ 'contact.number'|transchoice(richieste, {'%n%': richieste}, "WSPPromo")|raw }#}
