--- a/src/WSP/AdminBundle/Resources/views/layout/footerEmpty.html.twig
+++ b/src/WSP/AdminBundle/Resources/views/layout/footerEmpty.html.twig
@@ -1,3 +1,3 @@
 <div class="copyright">
-    2014 &copy; World Sticker Price di Giacomo Orlandi - Via di Montenero, 324 - 57128 Livorno (Italia) - P.IVA 01633260490
+    2014 &copy; World Sticker Price - Via di Montenero, 324 - 57128 Livorno (Italia) - P.IVA 01633260490 - Cod. Fisc. RLNGCM79M09E625F
 </div>
