--- a/src/Metronic/AdminBundle/Resources/views/email.html.twig
+++ b/src/Metronic/AdminBundle/Resources/views/email.html.twig
@@ -163,7 +163,10 @@
                         <table border="0" cellpadding="0" cellspacing="0" width="600px" style="height:100%;">
                             <tr>
                                 <td align="left" valign="middle" style="padding-left:20px;">
-                                    <a href="{{ url('home') }}">
+                                    {% if home is not defined %}
+                                        {% set home = url('home') %}
+                                    {% endif %}
+                                    <a href="{{ home }}">
                                         <img src="{{ url('home') ~ logo }}" alt="{% block logotitle %}Metronic logo{% endblock logotitle %}"/>
                                     </a>
                                 </td>
