fix footer email

--- a/src/WSP/PromoBundle/Resources/views/Contatto/email.html.twig
+++ b/src/WSP/PromoBundle/Resources/views/Contatto/email.html.twig
@@ -24,5 +24,5 @@
     Se non vuoi più riceverla, mandaci una mail a <a href="mailto:staff@wsprice.it" style="color: #999;">staff@wsprice.it</a><br/>
     <b>ATTENZIONE</b>: non rispondete a questa email, l'indirizzo è utilizzato solo per gli invii e non prevede possibilità di ricezione.<br/> 
 {% endif %}
-Copyright © 2014 World Sticker Price
+2014 &copy; World Sticker Price - Via Cairoli, 21 - 57123 Livorno (Italia) - P.IVA 01633260490 - Cod. Fisc. RLNGCM79M09E625F
 {% endblock unsubscribe %}
