--- a/src/WSP/ACLBundle/Resources/views/Negozio/index/tabs/home/form/contacts.html.twig
+++ b/src/WSP/ACLBundle/Resources/views/Negozio/index/tabs/home/form/contacts.html.twig
@@ -14,6 +14,6 @@
 {% if negozio.sito %}
     <p>{{ 'home.contacts.site'|trans({}, 'WSPNegozio') }}: <a href="{{ negozio.sito }}" target="_blank">{{ negozio.sito }}</a></p>
 {% endif %}
-{% if negozio.prova %}
+{% if negozio.provami %}
     <p>{{ 'home.contacts.site'|trans({}, 'WSPNegozio') }}: <a href="{{ negozio.sito }}" target="_blank">{{ negozio.sito }}</a></p>
 {% endif %}  
