--- a/src/WSP/ACLBundle/Resources/views/Negozio/index/tabs/home.html.twig
+++ b/src/WSP/ACLBundle/Resources/views/Negozio/index/tabs/home.html.twig
@@ -5,8 +5,8 @@
                 <li><img src="{{ asset(negozio.avatar) }}" class="img-responsive" alt="" /> 
                     <a href="#" class="profile-edit">{{ 'commons.edit'|trans({}, 'WSPNegozio') }}</a>
                 </li>
-                <li><a href="#">{{ 'home.edit.home'|trans({}, 'WSPNegozio') }}</a></li>
-                <li><a href="#">{{ 'home.edit.contacts'|trans({}, 'WSPNegozio') }}</a></li>
+                <li><a href="javascript:;" class="open-form" form="data">{{ 'home.edit.home'|trans({}, 'WSPNegozio') }}</a></li>
+                <li><a href="javascript:;" class="open-form" form="contacts">{{ 'home.edit.contacts'|trans({}, 'WSPNegozio') }}</a></li>
 {#
                 <li><a href="#">Messages <span>3</span></a></li>
                 <li><a href="#">Friends</a></li>
@@ -17,20 +17,10 @@
         <div class="col-md-9">
             <div class="row">
                 <div class="col-md-8 profile-info">
-                    <div class="row">
-                        <h2>{{ negozio.nome }}</h2>
-                        <p>{% if negozio.descrizione %}{{ negozio.descrizione|nl2br }}{% else %}<a href="javascrit:;">{{ 'descrizione.insert'|trans({}, 'WSPNegozio') }}</a>{% endif %}</p>
-{#
-                    <ul class="list-inline">
-                        <li><i class="fa fa-map-marker"></i> Spain</li>
-                        <li><i class="fa fa-calendar"></i> 18 Jan 1982</li>
-                        <li><i class="fa fa-briefcase"></i> Design</li>
-                        <li><i class="fa fa-star"></i> Top Seller</li>
-                        <li><i class="fa fa-heart"></i> BASE Jumping</li>
-                    </ul>
-#}
+                    <div class="row" id="data">
+                        {% include "WSPACLBundle:Negozio:index/tabs/home/data.html.twig" %}
                     </div>
-                    <div class="row">
+                    <div class="row" id="contacts">
                         {% include "WSPACLBundle:Negozio:index/tabs/home/contacts.html.twig" %}
                     </div>
                 </div>
