--- a/src/WSP/ACLBundle/Resources/views/Negozio/index.html.twig
+++ b/src/WSP/ACLBundle/Resources/views/Negozio/index.html.twig
@@ -13,6 +13,7 @@
 {% endblock css %}
 
 {% block js %}
+<script src="http://maps.google.com/maps/api/js?sensor=true" type="text/javascript"></script>
 {% javascripts  
     '@MetronicAdminBundle/Resources/public/plugins/bootstrap-fileupload/bootstrap-fileupload.js'
     '@WSPACLBundle/Resources/public/js/negozio.js'
