--- a/src/WSP/ACLBundle/Resources/views/Negozio/index/tabs/home.html.twig
+++ b/src/WSP/ACLBundle/Resources/views/Negozio/index/tabs/home.html.twig
@@ -2,8 +2,8 @@
     <div class="row">
         <div class="col-md-3">
             <ul class="list-unstyled profile-nav">
-                <li><img src="{{ asset(negozio.avatar) }}" class="img-responsive" alt="" /> 
-                    <a href="#" class="profile-edit">{{ 'commons.edit'|trans({}, 'WSPNegozio') }}</a>
+                <li id="logo">
+                    {% include "WSPACLBundle:Negozio:index/tabs/home/logo.html.twig" %}
                 </li>
                 <li>
                     <a class=" btn default" href="{{ path('negozio_form_data') }}" data-target="#ajax_data" data-toggle="modal">{{ 'home.edit.home'|trans({}, 'WSPNegozio') }}</a>
@@ -526,6 +526,9 @@
             #}
         </div>
     </div>
+</div>
+<div class="modal fade" id="ajax_logo" tabindex="-1" role="basic" aria-hidden="true">
+    <img src="{{ asset('/bundles/metronicadmin/img/ajax-modal-loading.gif') }}" alt="" class="loading">
 </div>
 <div class="modal fade" id="ajax_data" tabindex="-1" role="basic" aria-hidden="true">
     <img src="{{ asset('/bundles/metronicadmin/img/ajax-modal-loading.gif') }}" alt="" class="loading">
