Bundle shop e crud crediti (migliorabile impaginazione form

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -1,5 +1,6 @@
 {% set nocostumizerstyle = true %}
 {% set compress = true %}
+{% set form_layout = 'MetronicAdminBundle::form/empty.html.twig' %}
 {% extends "MetronicAdminBundle::base.html.twig" %}
 {% block title %}World Sticker Price{% endblock title %}
 {% block basecss %}
