--- a/app/Resources/views/baseJs.html.twig
+++ b/app/Resources/views/baseJs.html.twig
@@ -1,5 +1,6 @@
 {% set nocostumizerstyle = false %}
 {% set compress = true %}
+{% set form_layout = 'MetronicAdminBundle::form/empty.html.twig' %}
 {% extends "MetronicAdminBundle::baseHeadJs.html.twig" %}
 {% block title %}World Sticker Price{% endblock title %}
 {% block basecss %}
