Periodo Pubblicazione & callback Logo

--- a/src/Metronic/AdminBundle/Resources/skeleton/crud/actions/create.php.twig
+++ b/src/Metronic/AdminBundle/Resources/skeleton/crud/actions/create.php.twig
@@ -58,8 +58,7 @@
             'method' => 'POST',
         ));
 
-        $form->add('submit', 'submit', array('label' => 'Aggiungi', 'attr' => array('class' => 'btn red btn-xs')));
-        $form->add('button', 'button', array('label' => 'Torna indietro', 'attr' => array('class' => 'btn yellow btn-xs', 'onclick' => "window.location='" . $this->generateUrl('{{ route_name_prefix }}') . "';")));
+        $form->add('submit', 'submit', array('label' => 'Create', 'attr' => array('class' => 'btn')));
 
         return $form;
     }
