--- a/src/Metronic/AdminBundle/Resources/skeleton/crud/actions/update.php.twig
+++ b/src/Metronic/AdminBundle/Resources/skeleton/crud/actions/update.php.twig
@@ -1,46 +1,53 @@
-
     /**
 {% block phpdoc_method_header %}
-     * Displays a form to edit an existing {{ entity }} entity.
+     * Edits an existing {{ entity }} entity.
 {% endblock phpdoc_method_header %}
      *
 {% block phpdoc_method_annotations %}
 {% if 'annotation' == format %}
 {% if has_slug %}
-     * @Route("/{slug}/edit", name="{{ route_name_prefix }}_edit")
+     * @Route("/{slug}", name="{{ route_name_prefix }}_update")
 {% else %}
-     * @Route("/{id}/edit", name="{{ route_name_prefix }}_edit")
+     * @Route("/{id}", name="{{ route_name_prefix }}_update")
 {% endif %}
-     * @Method("GET")
+     * @Method("PUT")
 {% if has_slug %}
      * @ParamConverter("comment", options={"mapping": {"slug": "slug"}})     
 {% else %}
      * @ParamConverter("id", class="{{ bundle }}:{{ entity }}")
 {% endif %}
-     * @Template()
+     * @Template("{{ bundle }}:{{ entity }}:edit.html.twig")
 {% endif %}
 {% endblock phpdoc_method_annotations %}
      */
 {% block method_definition %}
 {% if 'annotation' == format %}
-    public function editAction({{ entity }} $entity)
+    public function updateAction({{ entity }} $entity)
 {% else %}
-    public function editAction($id)
+    public function updateAction(Request $request, $id)
 {% endif %}
 {% endblock method_definition %}
     {
 {% block method_body %}
 {% if 'annotation' != format %}
         $entity = $this->find('{{ bundle }}:{{ entity }}', $id);
+{% else %}
+        $request = $this->getRequest();
 {% endif %}
         if (!$entity) {
             throw $this->createNotFoundException('Unable to find {{ entity }} entity.');
         }
-
-        $editForm = $this->createEditForm($entity);
 {% if 'delete' in actions %}
         $deleteForm = $this->createDeleteForm($id);
 {% endif %}
+        $editForm = $this->createEditForm($entity);
+        $editForm->handleRequest($request);
+
+        if ($editForm->isValid()) {
+            $this->persist($entity);
+
+            return $this->redirect($this->generateUrl('{{ route_name_prefix }}'));
+        }
 {% endblock method_body %}
 
 {% block method_return %}
@@ -63,25 +70,3 @@
 {% endif %}
 {% endblock method_return %}
     }
-
-{% block form %}
-    /**
-    * Creates a form to edit a {{ entity }} entity.
-    *
-    * @param {{ entity_class }} $entity The entity
-    *
-    * @return \Symfony\Component\Form\Form The form
-    */
-    private function createEditForm({{ entity_class }} $entity)
-    {
-        $form = $this->createForm(new {{ entity_class }}Type(), $entity, array(
-            'action' => $this->generateUrl('{{ route_name_prefix }}_update', array('id' => $entity->getId())),
-            'method' => 'PUT',
-        ));
-
-        $form->add('submit', 'submit', array('label' => 'Aggiorna', 'attr' => array('class' => 'btn red btn-xs')));
-        $form->add('button', 'button', array('label' => 'Torna indietro', 'attr' => array('class' => 'btn yellow btn-xs', 'onclick' => "window.location='" . $this->generateUrl('{{ route_name_prefix }}') . "';")));
-
-        return $form;
-    }
-{% endblock form %}
