--- a/src/WSP/ShopBundle/Resources/views/Crediti/index.html.twig
+++ b/src/WSP/ShopBundle/Resources/views/Crediti/index.html.twig
@@ -49,10 +49,10 @@ div.uploader {
                                 <th>#</th>
                                 <th>Nome</th>
                                 <th>Crediti</th>
-                                <th>Prezzo (Sconto)</th>
+                                <th>Prezzo (Sconto) €</th>
                                 <th>Descrizione</th>
                                 <th>Visibile</th>
-                                <th width="40" class="TAC">Op.</th>
+                                <th width="40">Op.</th>
                             </tr>
                         <tbody>
                     {% for entity in entities %}
