--- a/src/WSP/ShopBundle/Resources/views/Pubblicazione/edit.html.twig
+++ b/src/WSP/ShopBundle/Resources/views/Pubblicazione/edit.html.twig
@@ -1,31 +1,7 @@
-{% set page_title = 'Pacchetto crediti' %}
-{% set page_subtitle = '<i class="fa fa-money" style="font-size: 2em;"></i>' %}
-
+{% set page_title = 'Pubblicazione' %}
+{% set page_subtitle = false %}
 {% extends '::base.html.twig' %}
-
-{% block js %}
-    {% javascripts  
-        '@EphpUtilityBundle/Resources/public/js/commons/sugar-1.3.9.min.js'
-        '@EphpUtilityBundle/Resources/public/js/functions.js'
-    %}
-    <script type="text/javascript" src="{{ asset_url }}"></script>
-    {% endjavascripts %}                
-    <script type="text/javascript" src="{{ url('bazinga_jstranslation_js') }}"></script>
-{% endblock %}
-
-{% block ready_js %}
-Translator.locale = 'it'
-{% endblock %}
-
-{% block inline_css %}
-div.uploader {
-    width: 100% !important;
-    background-image: none;
-    height: auto;
-}
-{% endblock %}
-
-{% form_theme form 'MetronicAdminBundle::form/empty.html.twig' %}
+{% form_theme edit_form 'MetronicAdminBundle::form/empty.html.twig' %}
 
 {% block content %}
 <div class="row">
@@ -33,13 +9,9 @@ div.uploader {
         <!-- BEGIN SAMPLE TABLE PORTLET-->
         <div class="portlet box yellow">
             <div class="portlet-title">
-                <div class="caption"><i class="fa fa-money"></i>Pacchetti crediti</div>
+                <div class="caption"><i class="fa fa-money"></i>Pubblicazione</div>
                 <div class="tools">
                     <a href="javascript:;" class="collapse"></a>
-{#
-                    <a href="#portlet-config" data-toggle="modal" class="config"></a>
-                    <a href="javascript:;" class="reload"></a>
-#}
                 </div>
             </div>
             <div class="portlet-body">
@@ -48,7 +20,7 @@ div.uploader {
                         <thead>
                             <tr>
                                 <th>Nome</th>
-                                <th>Crediti</th>
+                                <th>Giorni</th>
                                 <th>Prezzo</th>
                                 <th>Visibile</th>
                                 <th width="40" class="TAC">Op.</th>
@@ -57,8 +29,8 @@ div.uploader {
                     {% for entity in entities %}
                             <tr>
                                 <td>{{ entity.nome }}</td>
-                                <td>{{ entity.crediti }}</td>
-                                <td>{{ entity.prezzo }} ({{ entity.sconto }}) €</td>
+                                <td>{{ entity.giorni }}</td>
+                                <td>{{ entity.prezzo }} ({{ entity.sconto }}) crediti</td>
                                 <td width="40" class="no-padding js-visibile">
                                     {% if entity.visibile %}
                                         SI
@@ -82,22 +54,24 @@ div.uploader {
         <!-- BEGIN SAMPLE TABLE PORTLET-->
         <div class="portlet box red">
             <div class="portlet-title">
-                <div class="caption"><i class="fa fa-money"></i>Nuovo pacchetto crediti</div>
+                <div class="caption"><i class="fa fa-money"></i>Modifica Pubblicazione</div>
                 <div class="tools">
                     <a href="javascript:;" class="collapse"></a>
-{#
-                    <a href="#portlet-config" data-toggle="modal" class="config"></a>
-                    <a href="javascript:;" class="reload"></a>
-#}
                 </div>
             </div>
             <div class="portlet-body">
-                {{ form_start(form) }}
-                {{ form_rest(form) }}
-                {{ form_end(form) }}
+                {{ form_start(edit_form) }}
+                {{ form_rest(edit_form) }}
+                {{ form_end(edit_form) }}
             </div>
         </div>
         <!-- END SAMPLE TABLE PORTLET-->
     </div>
 </div>
+<button class="btn yellow btn-xs" onclick="window.location='{{ path('pubblicazione') }}';">Torna indietro</button></a>
+<a href="{{ path('pubblicazione') }}">
+    <span class="label label-inverse">Torna indietro</span>
+</a>
+
+    {{ form(delete_form) }}
 {% endblock %}
